# graphgen

./: .dockerignore  .gitignore  Dockerfile  ITERATION_PLAN_entity_resolution_graph_cleanup.md  README.md  analyze_graphs.py  config.full-improved.yaml  config.medium.yaml  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  run_lda.py  run_with_config.py
.devcontainer/: devcontainer.json
.hermes/plans/: 2026-05-01_142611-automated-label-space-and-testing-framework.md
graphgen/: KG_README.md  data_types.py  main.py  orchestrator.py  prototype_gliner2_ontology.py  prototype_gliner2_runner.py  run_prototype_gliner2.py  smoke.py  types.py
graphgen/analytics/: analyzer.py  centrality.py  coherence.py  diversity.py  metrics.py  plot_style.py  reporting.py  separation.py  statistics.py  visualizer.py
graphgen/config/: llm.py  loader.py  schema.py  settings.py
graphgen/evaluation/: __init__.py  entity_resolution_eval.py  lda_baseline.py
graphgen/graph/: pruning.py  schema.py
graphgen/pipeline/: __init__.py  iterative_loader.py  (+1 more)
input/: translator.py  xml_processor.ipynb
src/: __init__.py
tests/: test_entity_canonicalization.py  test_entity_resolution_eval.py  test_entity_resolution_graph_cleanup.py  test_gliner2_pipeline_integration.py  test_gliner2_prototype.py  test_label_space.py  test_lda_baseline.py  test_local_smoke.py  test_pipeline_regressions.py  test_schemaless_prototype.py
thesis/: From Discourse to Structure_ A Graph-Based Approach to Topic Modeling in Political Debate.md  entity_kg.py  experiment_log.md  lda_results.json
(+123 files in other folders)
